fix panels z-index for mobile

--- a/bigbluebutton-html5/imports/ui/components/app/styles.scss
+++ b/bigbluebutton-html5/imports/ui/components/app/styles.scss
@@ -100,7 +100,7 @@
   @extend %text-elipsis;
   @extend %highContrastOutline;
   outline-style: solid;
-  z-index: 4;
+  z-index: 5;
   overflow: visible;
   order: 1;
 
@@ -140,7 +140,7 @@
   order: 2;
   height: 100%;
   @include mq($small-only) {
-    z-index: 4;
+    z-index: 5;
     height: auto;
     top: var(--navbar-height);
     overflow: visible;
